--- a/package.json
+++ b/package.json
@@ -34,12 +34,16 @@
         "@types/react": "^18.3.12",
         "@types/react-dom": "^18.3.1",
         "bcryptjs": "^3.0.2",
+        "cors": "^2.8.5",
+        "dotenv": "^17.2.3",
         "eslint": "^9.11.0",
         "eslint-plugin-react": "^7.36.1",
-        "express": "5.0.0",
+        "express": "^5.0.0",
         "framer-motion": "^10.18.0",
         "globals": "^15.9.0",
+        "jsonwebtoken": "^9.0.2",
         "langchain-gigachat": "^0.0.11",
+        "mongoose": "^8.19.2",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-icons": "^5.5.0",
