--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,5 +21,6 @@
         "**/*.test.ts",
         "**/*.test.tsx",
         "node_modules/@types/jest"
-    ]        
+    ],
+    "include": ["src"]
 }
