--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,8 @@
         "module": "esnext",
         "moduleResolution": "node",
         "target": "es6",
-        "jsx": "react",
+        "jsx": "react-jsx",
+        "skipLibCheck": true,
         "typeRoots": ["node_modules/@types", "src/typings"],
         "types" : ["webpack-env", "node"],
         "resolveJsonModule": true
