--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
         "build:prod": "npm run clean && brojs build",
         "clean": "rimraf dist",
         "eslint": "npx eslint ./src/**/*",
-        "eslint:fix": "npx eslint ./src/**/* --fix"
+        "eslint:fix": "npx eslint ./src/**/* --fix",
+        "server": "node stubs/api/index.js"
     },
     "author": "",
     "license": "ISC",
@@ -33,7 +34,7 @@
         "@types/node": "^22.15.18",
         "bcryptjs": "^3.0.2",
         "cors": "^2.8.5",
-        "dotenv": "^17.2.3",
+        "dotenv": "^16.4.5",
         "eslint": "^9.11.0",
         "eslint-plugin-react": "^7.36.1",
         "express": "^5.0.0",
@@ -42,6 +43,7 @@
         "history": "^5.3.0",
         "jsonwebtoken": "^9.0.2",
         "langchain-gigachat": "^0.0.11",
+        "mongoose": "^8.19.2",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-icons": "^5.5.0",
