--- a/package.json
+++ b/package.json
@@ -31,8 +31,6 @@
         "@supabase/supabase-js": "^2.49.4",
         "@tavily/core": "^0.5.2",
         "@types/node": "^22.15.18",
-        "@types/react": "^18.3.12",
-        "@types/react-dom": "^18.3.1",
         "bcryptjs": "^3.0.2",
         "cors": "^2.8.5",
         "dotenv": "^17.2.3",
@@ -52,5 +50,9 @@
         "typescript-eslint": "^8.6.0",
         "zod": "^3.24.4",
         "zustand": "^5.0.8"
+    },
+    "devDependencies": {
+        "@types/react": "^18.3.26",
+        "@types/react-dom": "^18.3.7"
     }
 }
