--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     },
     "devDependencies": {
         "@types/react": "^18.3.26",
-        "@types/react-dom": "^18.3.7"
+        "@types/react-dom": "^18.3.7",
+        "typescript": "^5.9.3"
     }
 }
