--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
         "react-dom": "^18.3.1",
         "react-icons": "^5.5.0",
         "react-redux": "^9.2.0",
-        "react-router-dom": "^6.23.1",
+        "react-router-dom": "^6.30.1",
         "socket.io": "^4.8.1",
         "socket.io-client": "^4.8.1",
         "typescript-eslint": "^8.6.0",
@@ -56,8 +56,18 @@
         "zustand": "^5.0.8"
     },
     "devDependencies": {
+        "@babel/core": "^7.28.5",
+        "@babel/preset-react": "^7.28.5",
         "@types/react": "^18.3.26",
         "@types/react-dom": "^18.3.7",
-        "typescript": "^5.9.3"
+        "babel-loader": "^10.0.0",
+        "css-loader": "^7.1.2",
+        "html-webpack-plugin": "^5.6.4",
+        "style-loader": "^4.0.0",
+        "typescript": "^5.9.3",
+        "webpack": "^5.102.1",
+        "webpack-cli": "^6.0.1",
+        "webpack-dev-server": "^5.2.2",
+        "webpack-hot-middleware": "^2.26.1"
     }
 }
