--- a/package.json
+++ b/package.json
@@ -22,11 +22,12 @@
         "@emotion/styled": "^11.11.0",
         "@eslint/js": "^9.11.0",
         "@langchain/community": "^0.3.43",
-        "@langchain/core": "^0.3.56",
+        "@langchain/core": "^0.3.79",
         "@langchain/deepseek": "^0.0.1",
         "@langchain/langgraph": "^0.2.72",
         "@langchain/ollama": "^0.2.0",
         "@langchain/tavily": "^0.1.1",
+        "@monaco-editor/react": "^4.7.0",
         "@reduxjs/toolkit": "^2.8.2",
         "@stylistic/eslint-plugin": "^2.8.0",
         "@supabase/supabase-js": "^2.49.4",
@@ -40,6 +41,7 @@
         "express": "^5.0.0",
         "framer-motion": "^10.18.0",
         "globals": "^15.9.0",
+        "highlight.js": "^11.11.1",
         "history": "^5.3.0",
         "jsonwebtoken": "^9.0.2",
         "langchain-gigachat": "^0.0.11",
@@ -49,6 +51,7 @@
         "react-icons": "^5.5.0",
         "react-redux": "^9.2.0",
         "react-router-dom": "^6.23.1",
+        "react-simple-code-editor": "^0.14.1",
         "socket.io": "^4.8.1",
         "socket.io-client": "^4.8.1",
         "typescript-eslint": "^8.6.0",
