--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "express": "^5.0.0",
         "framer-motion": "^10.18.0",
         "globals": "^15.9.0",
+        "gsap": "^3.13.0",
         "history": "^5.3.0",
         "jsonwebtoken": "^9.0.2",
         "langchain-gigachat": "^0.0.11",
@@ -49,6 +50,7 @@
         "react-icons": "^5.5.0",
         "react-redux": "^9.2.0",
         "react-router-dom": "^6.30.1",
+        "react-use": "^17.6.0",
         "socket.io": "^4.8.1",
         "socket.io-client": "^4.8.1",
         "typescript-eslint": "^8.6.0",
