--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "@emotion/react": "^11.11.3",
         "@emotion/styled": "^11.11.0",
         "@eslint/js": "^9.11.0",
+        "@gsap/react": "^2.1.2",
         "@langchain/community": "^0.3.43",
         "@langchain/core": "^0.3.56",
         "@langchain/deepseek": "^0.0.1",
