--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
         "@emotion/styled": "^11.11.0",
         "@eslint/js": "^9.11.0",
         "@gsap/react": "^2.1.2",
-        "@langchain/community": "^0.3.43",
+        "@langchain/community": "^0.3.58",
         "@langchain/core": "^0.3.79",
         "@langchain/deepseek": "^0.0.1",
         "@langchain/langgraph": "^0.2.72",
@@ -43,8 +43,8 @@
         "express": "^5.0.0",
         "framer-motion": "^10.18.0",
         "globals": "^15.9.0",
-        "highlight.js": "^11.11.1",
         "gsap": "^3.13.0",
+        "highlight.js": "^11.11.1",
         "history": "^5.3.0",
         "jsonwebtoken": "^9.0.2",
         "langchain-gigachat": "^0.0.11",
@@ -52,10 +52,12 @@
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-icons": "^5.5.0",
+        "react-markdown": "^10.1.0",
         "react-redux": "^9.2.0",
         "react-router-dom": "^6.30.1",
-        "react-use": "^17.6.0",
         "react-simple-code-editor": "^0.14.1",
+        "react-use": "^17.6.0",
+        "remark-gfm": "^4.0.1",
         "socket.io": "^4.8.1",
         "socket.io-client": "^4.8.1",
         "typescript-eslint": "^8.6.0",
