--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
         "test": "exit 0",
         "start": "brojs server --port=8099 --with-open-browser",
         "build": "npm run clean && brojs build --dev",
-        "build:prod": "npm run clean && brojs build --public-path=/cherry/1.0.1/",
+        "build:prod": "npm run clean && brojs build",
         "clean": "rimraf dist",
         "eslint": "npx eslint ./src/**/*",
         "eslint:fix": "npx eslint ./src/**/* --fix",
